force-app/main/default/objects/Cp_sales_Campaign__c/Cp_sales_Campaign__c.object-meta.xml
<CustomObject>
    <label>Campaign</label>
    <nameField>
        <label>Cp sales_ Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cp sales_ Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>