force-app/main/default/objects/Cp_sales_Campaign__c/fields/ActualCost__c.field-meta.xml
<CustomField>
    <fullName>ActualCost__c</fullName>
    <label>Actual Cost in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>