force-app/main/default/objects/Cp_sales_Campaign__c/fields/BudgetedCost__c.field-meta.xml
<CustomField>
    <fullName>BudgetedCost__c</fullName>
    <label>Budgeted Cost in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>