force-app/main/default/objects/Cp_sales_Campaign__c/fields/Contacts_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Contacts_in_Hierarchy__c</fullName>
    <label>Contacts in Hierarchy</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>