force-app/main/default/objects/Cp_sales_Campaign__c/fields/Cp_sales_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Cp_sales_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cp sales_ Campaign</label>
    <referenceTo>Cp_sales_Campaign__c</referenceTo>
    <relationshipName>Cp_sales_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>