force-app/main/default/objects/Cp_sales_Campaign__c/fields/Expected_Response__c.field-meta.xml
<CustomField>
    <fullName>Expected_Response__c</fullName>
    <label>Expected Response (%)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>