force-app/main/default/objects/Cp_sales_Campaign__c/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <label>Expected Revenue in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>