force-app/main/default/objects/Cp_sales_Campaign__c/fields/HierarchyActualCost__c.field-meta.xml
<CustomField>
    <fullName>HierarchyActualCost__c</fullName>
    <label>Actual Cost in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>