force-app/main/default/objects/Cp_sales_Campaign__c/fields/HierarchyBudgetedCost__c.field-meta.xml
<CustomField>
    <fullName>HierarchyBudgetedCost__c</fullName>
    <label>Budgeted Cost in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>