force-app/main/default/objects/Cp_sales_Campaign__c/fields/HierarchyExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>HierarchyExpectedRevenue__c</fullName>
    <label>Expected Revenue in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>