force-app/main/default/objects/Cp_sales_Campaign__c/fields/HierarchyNumberOfConvertedLeads__c.field-meta.xml
<CustomField>
    <fullName>HierarchyNumberOfConvertedLeads__c</fullName>
    <label>Converted Leads in Hierarchy</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>