force-app/main/default/objects/Cp_sales_Campaign__c/fields/HierarchyNumberOfLeads__c.field-meta.xml
<CustomField>
    <fullName>HierarchyNumberOfLeads__c</fullName>
    <label>Leads in Hierarchy</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>