force-app/main/default/objects/Cp_sales_Campaign__c/fields/Leads_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Leads_in_Campaign__c</fullName>
    <label>Leads in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>