force-app/main/default/objects/Cp_sales_Campaign__c/fields/Number_Sent_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Number_Sent_in_Campaign__c</fullName>
    <label>Number sent in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>