force-app/main/default/objects/Cp_sales_Campaign__c/fields/NumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfContacts__c</fullName>
    <label>Contacts in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>