force-app/main/default/objects/Cp_sales_Campaign__c/fields/NumberOfConvertedLeads__c.field-meta.xml
<CustomField>
    <fullName>NumberOfConvertedLeads__c</fullName>
    <label>Converted Leads in Campaign</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>