force-app/main/default/objects/Cp_sales_Campaign__c/fields/ParentCampaign__c.field-meta.xml
<CustomField>
    <fullName>ParentCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentCampaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Cp_sales_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>