force-app/main/default/objects/Cp_sales_Campaign__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Demo signup/Trial</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Referral Program</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Thought Leadership</fullName>
            </value>
            <value>
                <fullName>Website Direct</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>